# tutoria-ia

./: .gitignore  README.md
aula_1/: CONTEUDO.md  Introdução à LLM.pptx
aula_1/apoio/: pyproject.toml
aula_1/apoio/src/: main.py
aula_1/apoio/src/ai/: llm.py
aula_1/apoio/src/cli/: cli.py
aula_1/live/: pyproject.toml
aula_1/live/src/: main.py
aula_1/live/src/ai/: llm.py
aula_1/live/src/cli/: cli.py
aula_10/react-cli/: pyproject.toml
aula_10/react-cli/src/: cli.py  main.py  tools.py
aula_2/: CONTEUDO.md  TutoriaI_Aula_2_Rag.pptx
aula_2/projects/chat-csv-sql-ia/: README.md  pyproject.toml
aula_2/projects/chat-csv-sql-ia/src/: main.py
aula_2/projects/chat-csv-sql-ia/src/ai/: natural_chain.py  service.py  sql_chain.py
aula_2/projects/chat-csv-sql-ia/src/controller/: api.py
aula_2/projects/chat-csv-sql-ia/src/db/: engine.py
aula_2/projects/chat-csv-sql-ia/src/pipeline/: to_sql.py
aula_2/projects/chat-csv-sql-ia/src/prompts/: variables.py
aula_2/projects/email-vagas-ia/: README.md  pyproject.toml
aula_2/projects/email-vagas-ia/assets/: cv.docx
aula_2/projects/email-vagas-ia/src/: main.py
aula_2/projects/email-vagas-ia/src/mail/: credentials.py  gmail_connect.py  gmail_tools.py
aula_2/projects/email-vagas-ia/src/prompts/: variables.py
aula_2/projects/email-vagas-ia/src/rag/: cv_rag.py  rag.py
aula_2/projects/email-vagas-ia/src/util/: stdout.py  stout.py
aula_2/projects/email-vagas-ia/src/watcher/: gmail_watcher.py  llm.py
aula_3/: CONTEUDO.md
aula_3/taskbot_ai/: README.md  langgraph.json  pyproject.toml  text.txt
aula_3/taskbot_ai/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
aula_3/taskbot_ai/src/: main.py
aula_3/taskbot_ai/src/agent/: prompt.py  task_agent.py
aula_3/taskbot_ai/src/bot/: poll.py
aula_3/taskbot_ai/src/tasks/: credentials.py  google_tasks.py
aula_3/taskbot_ai/src/tools/: tools.py
aula_4/: CONTEUDO.md
aula_4/bash_assistant/: README.md  langgraph.json  pyproject.toml
aula_4/bash_assistant/src/: main.py
aula_4/bash_assistant/src/agent/: bash_assistant.py  prompt.py
aula_4/bash_assistant/src/rag/: embed.py  faiss_rag.py
aula_4/bash_assistant/src/rag/faiss_rerank/: index.faiss  index.pkl
aula_4/bash_assistant/src/rag/faiss_simple/: index.pkl
aula_4/bash_assistant/src/tools/: make_tools.py
aula_5/: aula.md
aula_6/: aula.md
aula_6/memory-ai/: pyproject.toml
aula_6/memory-ai/src/: main.py
aula_6/memory-ai/src/ai/: agent.py
aula_6/memory-ai/src/ai/memory/: dialogos.json
aula_6/memory-ai/src/ai/prompts/: system.py
aula_6/memory-ai/src/cli/: app.py
aula_7/: aula.md
aula_7/human-in-the-agent/: README.md  pyproject.toml
aula_7/human-in-the-agent/contracts/: contrato_troca_pokemon_20250929_170246.md  contrato_troca_pokemon_20250929_170707.md
aula_7/human-in-the-agent/src/: main.py
aula_7/human-in-the-agent/src/ai/: human_as_tool.py  human_loop.py
aula_7/human-in-the-agent/src/ai/img/: graph_20250929_211743.mmd
aula_7/human-in-the-agent/src/ai/prompts/: rules.py
aula_7/human-in-the-agent/src/ai/tools/: config.py  poke_mcp.py  save_contract_mcp.py  signature_human_mcp.py
aula_7/human-in-the-agent/src/chat/: tui.py
