[project]
name = "bash-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian Vieira Salgado",email = "vieira4ev@gmail.com"}
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "langgraph (>=0.5.2,<0.6.0)",
    "langgraph-prebuilt (>=0.5.2,<0.6.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "unstructured[md] (>=0.18.11,<0.19.0)",
    "python-magic-bin (>=0.4.14,<0.5.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
]

[tool.poetry]
packages = [
    {include = "agent", from = "src"},
    {include = "rag", from = "src"},
    {include = "tools", from = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
