[project]
name = "human-in-the-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian Vieira Salgado",email = "vieira4ev@gmail.com"}
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "fastmcp (>=2.12.3,<3.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-mcp-adapters (>=0.1.10,<0.2.0)",
    "pyppeteer (>=2.0.0,<3.0.0)",
    "fastapi (>=0.118.0,<0.119.0)"
]

[tool.poetry]
packages = [{include = "chat", from = "src"},{include = "ai", from = "src"}, {include = "external"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
