[project]
name = "chat-csv-sql-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "EonCyber",email = "vieira4ev@gmail.com"}
]
readme = "README.md"
requires-python = "~3.13.3"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "langchain-core (>=0.3.66,<0.4.0)",
    "langchain-openai (>=0.3.24,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "langchain (>=0.3.26,<0.4.0)"
]

[tool.poetry]
packages = [
    {include = "ai", from = "src"},
    {include = "controller", from = "src"},
    {include = "data", from = "src"},
    {include = "db", from = "src"},
    {include = "pipeline", from = "src"},
    {include = "prompts", from = "src"},
    ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
