[project]
name = "email-vagas-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "EonCyber",email = "eonciber@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core (>=0.3.65,<0.4.0)",
    "langchain-openai (>=0.3.24,<0.4.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-api-python-client (>=2.172.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "mail", from = "src"},
    {include = "rag", from = "src"},
    {include = "watcher", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
